--- a/tiktok.html
+++ b/tiktok.html
@@ -16,7 +16,7 @@
         <!-- Shape 1: Input & Download Button -->.
 <br>
 <video autoplay muted loop width="100%" height="100%">
-<source src="https://a.top4top.io/m_3262f6ptu0.mp4" type="video/mp4">
+<source src="https://k.top4top.io/m_3306boukc3.mp4" type="video/mp4">
 </video>
 <div class="shape input-section">
 <br><br><br><br><br><br><br><br>
