--- a/tiktok.html
+++ b/tiktok.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tiktok Downloader</title>
+<title>Tiktok Downloader By Mr Exsploit Wmc</title>
 <link rel="stylesheet" href="https://naraanimation.github.io/TiktokDownloader/tiktok.css">
 </head>
 <body>
